# iLauncher

./: .gitignore  DATABASE_ALTERNATIVES.md  DATABASE_LOCKED_FIX.md  FEATURE_COMPARISON.md  ILAUNCHER_USAGE.md  INIT_COMPLETE.md  LICENSE  MEMORY_OPTIMIZATION.md  MEMORY_USAGE.md  MFT_SCANNER_ANALYSIS.md  MFT_SCAN_OPTIMIZATION.md  MFT_SERVICE_EXIT.md  MFT_SERVICE_USAGE.md  MFT_UI_INTEGRATION.md  OPTIMIZATION_RESULT.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_DEBUG.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PERFORMANCE_TEST_RESULTS.md  PERF_ANALYSIS.md  PLUGINS_SUMMARY.md  PROMPT_IMPLEMENTATION.md  README.md  TODO.md  analyze_scan_perf.ps1  diagnose.ps1  index.html  kill_and_rebuild.ps1  monitor_memory.ps1  monitor_simple.ps1  package-lock.json  package.json  prompt.txt  rebuild_db.ps1  run_perf_test.ps1  run_test.ps1  scan_config.json  tailwind.config.js  test_ilauncher.ps1  (+15 more)
.github/: copilot-instructions.md
docs/: AI_ASSISTANT.md  AI_MULTI_PROVIDER.md  AUTOSTART_IMPLEMENTATION.md  AUTOSTART_TEST.md  CLIPBOARD_ENHANCEMENT.md  ICON_DESIGN.md  ICON_FEATURE.md  ICON_TEST_RESULT.md  MFT_MMAP_WARMUP.md  PHASE_1_8_COMPLETION_SUMMARY.md  PHASE_6_8_ENHANCEMENTS.md  PLUGIN_MARKETPLACE.md  PLUGIN_PACKAGE_FORMAT.md  PLUGIN_SANDBOX.md  README_EN.md  RELEASE_CHECKLIST.md  SANDBOX_AUDIT_SYSTEM.md  SMART_SUGGESTIONS.md  THEME_CONFIG_INTEGRATION.md  UPDATER_SETUP.md
scripts/: convert_svg_to_icons.py  generate-updater-json.js  (+3 more)
src-tauri/: Cargo.toml  scan_config.json  tauri.conf.json  test_clipboard.db  test_clipboard_5a65a511-b101-4729-b31f-71e1373f6926.db
src-tauri/capabilities/: default.json
src-tauri/examples/: add_indexes.rs  profile_mft_scan.rs  test_bm25_ranking.rs  test_duplicate_results.rs  test_fixed_search.rs  test_fts5.rs  test_fts5_prefix.rs  test_fts5_search_performance.rs  test_fts5_syntax.rs  test_group_by_dedup.rs  test_mft_scan_perf.rs  test_ntfs.rs  test_opera_search.rs  test_scanner_memory.rs  test_search_results.rs
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  lib.rs  main.rs  search_history.rs
src-tauri/src/commands/: ai.rs  audit.rs  mod.rs  plugin_market.rs  storage.rs  suggestion.rs  workflow.rs
src-tauri/src/core/: mod.rs  types.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/mft_scanner/: config.rs  database.rs  db_pool.rs  debug_reader.rs  delta_merger.rs  index_builder.rs  ipc.rs  launcher.rs  mod.rs  monitor.rs  multi_drive_scanner.rs  query_cache.rs  scanner.rs  scanner_usn.rs  streaming_builder.rs  types.rs  usn_incremental_updater.rs
src-tauri/src/plugin/: ai_assistant.rs  app_search.rs  audit.rs  browser.rs  calculator.rs  clipboard.rs  devtools.rs  execution_history.rs  file_search.rs  git_projects.rs  mod.rs  plugin_installer.rs  plugin_store.rs  process.rs  sandbox.rs  sandbox_demo.rs  settings.rs  smart_suggestion.rs  system_commands.rs  translator.rs  unit_converter.rs  web_search.rs  window_manager.rs  workflow_engine.rs
src-tauri/src/preview/: code_highlight.rs  mod.rs
src-tauri/src/ranking/: mod.rs
src-tauri/src/statistics/: mod.rs
src-tauri/src/storage/: clipboard_db.rs  mod.rs
src-tauri/src/utils/: autostart.rs  icon_cache.rs  icon_cache_test.rs  mod.rs  paths.rs
src-tauri/tests/: sandbox_test.rs
(+40 files in other folders)
