[package]
name = "ilauncher"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ilauncher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步运行时
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# 工具库
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
bincode = "1"
arboard = "3"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# 全局热键
global-hotkey = "0.6"

# 搜索和匹配
fuzzy-matcher = "0.3"
urlencoding = "2"
rustc-hash = "2"  # 高性能哈希
rayon = "1.10"    # 并行计算

# 数据库
rusqlite = { version = "0.32", features = ["bundled", "vtab", "modern_sqlite"] }
once_cell = "1.19"  # 全局懒加载单例

# 文件系统
walkdir = "2"

# 命令行解析（用于 scanner/monitor 二进制）
clap = { version = "4", features = ["derive"] }
ctrlc = "3.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_Ioctl",
    "Win32_System_Memory",
    "Win32_System_DataExchange",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
interprocess = { version = "2.2.1", features = ["tokio"] }

# 系统信息
directories = "5"
dirs = "5"
sysinfo = "0.31"

